--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,6 +33,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    # Applies to all files under models/example/
-    example:
-      materialized: view
+    1_staging:
+      +materialized: view
+    2_marts:
+      1_core:
+        +materialized: table
