--- a/models/1_staging/1_jaffle_shop/stage_customers.yml
+++ b/models/1_staging/1_jaffle_shop/stage_customers.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
   - name: stage_customers
+    description: One unique customer per row.
     columns:
       - name: customer_id
+        description: Primary key for stage_customers.
         tests:
           - unique
           - not_null
