--- a/models/1_staging/1_jaffle_shop/stage_orders.yml
+++ b/models/1_staging/1_jaffle_shop/stage_orders.yml
@@ -4,19 +4,22 @@ models:
   - name: stage_orders
     columns:
       - name: order_id
+        description: The primary key for stage_orders.
         tests:
           - unique
           - not_null
       - name: status
+        description: '{{ doc("order_status")}}'
         tests:
           - accepted_values:
               values:
-                - completed
                 - placed
+                - shipped
+                - completed
                 - return_pending
                 - returned
-                - shipped
       - name: customer_id
+        description: The foreign key to stage_customers.customer_id.
         tests:
           - relationships:
               to: ref('stage_customers')
